// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`identify-with-password Client-side field change validation tests fails client side validation with no inputs 1`] = `
<div>
  <div
    class="MuiScopedCssBaseline-root emotion-0"
  >
    <div
      class="MuiScopedCssBaseline-root emotion-1"
    >
      <main
        class="auth-container main-container MuiBox-root emotion-2"
        data-commit="b9bbc0140703c3fbf0e2e58920362e70"
        data-version="0.0.0"
        dir="ltr"
        id="okta-sign-in"
        lang="en"
      >
        <div
          class="MuiScopedCssBaseline-root emotion-3"
        >
          <div
            class="MuiBox-root emotion-4"
          >
            <div
              class="MuiBox-root emotion-5"
            >
              <div
                class="okta-sign-in-header auth-header MuiBox-root emotion-6"
              >
                <h1
                  class="MuiTypography-root MuiTypography-h1 emotion-7"
                />
              </div>
              <div
                class="MuiBox-root emotion-8"
              >
                <form
                  class="o-form MuiBox-root emotion-9"
                  data-se="o-form"
                  novalidate=""
                >
                  <div
                    class="MuiBox-root emotion-10"
                  >
                    <div
                      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 MuiAlert-root MuiAlert-infoboxError MuiAlert-infobox emotion-11"
                      role="alert"
                    >
                      <div
                        class="MuiAlert-icon emotion-12"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit emotion-13"
                          fill="none"
                          focusable="false"
                          viewBox="0 0 24 24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            clip-rule="evenodd"
                            d="M9.879 1.707a3 3 0 0 1 4.242 0l8.172 8.172a3 3 0 0 1 0 4.242l-8.172 8.172a3 3 0 0 1-4.242 0L1.707 14.12a3 3 0 0 1 0-4.242L9.88 1.707ZM12 13a1 1 0 0 1-1-1V7h2v5a1 1 0 0 1-1 1Zm0 1.75a1.25 1.25 0 1 0 0 2.5 1.25 1.25 0 0 0 0-2.5Z"
                            fill="currentColor"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </div>
                      <div
                        class="MuiAlert-message emotion-14"
                      >
                        We found some errors. Please review the form and make corrections.
                      </div>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root emotion-15"
                  >
                    <div
                      class="MuiBox-root emotion-16"
                    >
                      <div
                        class="MuiBox-root emotion-17"
                      >
                        <h2
                          class="MuiTypography-root MuiTypography-h4 emotion-18"
                          data-se="o-form-head"
                          id="identify_Title_Sign_In_aut1egri5t7iomJ3l1d7_1"
                          tabindex="-1"
                        >
                          Sign In
                        </h2>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-16"
                    >
                      <div
                        class="MuiBox-root emotion-2"
                      >
                        <label
                          class="MuiFormLabel-root MuiInputLabel-root MuiFormLabel-colorPrimary MuiInputLabel-root emotion-21"
                          data-shrink="false"
                          for="identifier"
                        >
                          Username
                        </label>
                        <div
                          class="MuiInputBase-root MuiInputBase-colorPrimary Mui-error MuiInputBase-fullWidth Mui-focused emotion-22"
                          dir="ltr"
                        >
                          <input
                            aria-describedby=" identifier-error  "
                            aria-invalid="true"
                            autocomplete="username"
                            class="MuiInputBase-input emotion-23"
                            data-se="identifier"
                            id="identifier"
                            name="identifier"
                            type="text"
                          />
                        </div>
                        <div
                          class="MuiBox-root emotion-2"
                        >
                          <p
                            class="MuiFormHelperText-root Mui-error emotion-25"
                            data-se="identifier-error"
                            id="identifier-error"
                            role="alert"
                          >
                            This field cannot be left blank
                          </p>
                        </div>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-16"
                    >
                      <div
                        class="MuiBox-root emotion-2"
                      >
                        <label
                          class="MuiFormLabel-root MuiInputLabel-root MuiFormLabel-colorPrimary MuiInputLabel-root emotion-21"
                          data-shrink="false"
                          for="credentials.passcode"
                        >
                          Password
                        </label>
                        <div
                          class="MuiInputBase-root MuiInputBase-colorPrimary Mui-error MuiInputBase-fullWidth MuiInputBase-adornedEnd emotion-22"
                          dir="ltr"
                        >
                          <input
                            aria-describedby=" credentials.passcode-error  "
                            aria-invalid="true"
                            autocomplete="current-password"
                            class="MuiInputBase-input MuiInputBase-inputAdornedEnd emotion-23"
                            data-se="credentials.passcode"
                            id="credentials.passcode"
                            name="credentials.passcode"
                            type="password"
                          />
                          <div
                            class="MuiInputAdornment-root MuiInputAdornment-positionEnd emotion-31"
                          >
                            <button
                              aria-controls="credentials.passcode"
                              aria-label="Show password"
                              aria-pressed="false"
                              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium emotion-32"
                              data-mui-internal-clone-element="true"
                              tabindex="0"
                              type="button"
                            >
                              <svg
                                aria-hidden="true"
                                class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit emotion-13"
                                fill="none"
                                focusable="false"
                                viewBox="0 0 16 16"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  clip-rule="evenodd"
                                  d="M3.89765 11.5506C2.89626 10.6994 2.04176 9.50056 1.15617 8C2.04176 6.49944 2.89626 5.30062 3.89765 4.44944C4.96916 3.53865 6.24031 3 8 3C9.75969 3 11.0308 3.53865 12.1024 4.44944C13.1037 5.30062 13.9582 6.49944 14.8438 8C13.9582 9.50056 13.1037 10.6994 12.1024 11.5506C11.0308 12.4613 9.75969 13 8 13C6.24031 13 4.96916 12.4613 3.89765 11.5506ZM8 14C12 14 14 11.5 16 8C14 4.5 12 2 8 2C4 2 2 4.5 0 8C2 11.5 4 14 8 14ZM11 8C11 9.65685 9.65685 11 8 11C6.34315 11 5 9.65685 5 8C5 6.34315 6.34315 5 8 5C9.65685 5 11 6.34315 11 8ZM12 8C12 10.2091 10.2091 12 8 12C5.79086 12 4 10.2091 4 8C4 5.79086 5.79086 4 8 4C10.2091 4 12 5.79086 12 8Z"
                                  fill="currentColor"
                                  fill-rule="evenodd"
                                />
                              </svg>
                            </button>
                          </div>
                        </div>
                        <div
                          class="MuiBox-root emotion-2"
                        >
                          <p
                            class="MuiFormHelperText-root Mui-error emotion-25"
                            data-se="credentials.passcode-error"
                            id="credentials.passcode-error"
                            role="alert"
                          >
                            This field cannot be left blank
                          </p>
                        </div>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-16"
                    >
                      <fieldset
                        class="MuiFormControl-root MuiFormControl-marginNormal emotion-37"
                      >
                        <label
                          class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd emotion-38"
                        >
                          <span
                            class="MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorPrimary PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-root MuiCheckbox-colorPrimary emotion-39"
                          >
                            <input
                              class="PrivateSwitchBase-input emotion-40"
                              data-indeterminate="false"
                              data-se="rememberMe"
                              data-se-for-name="rememberMe"
                              id="rememberMe"
                              name="rememberMe"
                              type="checkbox"
                            />
                          </span>
                          <span
                            class="MuiTypography-root MuiTypography-body1 MuiFormControlLabel-label emotion-41"
                          >
                            Keep me signed in
                          </span>
                        </label>
                      </fieldset>
                    </div>
                    <div
                      class="MuiBox-root emotion-16"
                    >
                      <button
                        class="MuiButtonBase-root MuiButton-root MuiButton-primary MuiButton-primaryPrimary MuiButton-sizeMedium MuiButton-primarySizeMedium MuiButton-disableElevation MuiButton-fullWidth MuiButton-root MuiButton-primary MuiButton-primaryPrimary MuiButton-sizeMedium MuiButton-primarySizeMedium MuiButton-disableElevation MuiButton-fullWidth emotion-43"
                        data-type="save"
                        tabindex="0"
                        type="submit"
                      >
                        Sign in
                      </button>
                    </div>
                    <div
                      class="MuiBox-root emotion-16"
                    >
                      <button
                        class="MuiTypography-root MuiTypography-body1 MuiLink-root MuiLink-underlineAlways MuiLink-button emotion-45"
                        data-se="forgot-password"
                        role="link"
                        type="button"
                      >
                        Forgot password?
                      </button>
                    </div>
                    <div
                      class="MuiBox-root emotion-16"
                    >
                      <a
                        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways emotion-47"
                        data-se="help"
                        href="http://localhost:3000/help/login"
                      >
                        Help
                      </a>
                    </div>
                    <div
                      class="MuiBox-root emotion-16"
                    >
                      <hr
                        class="MuiDivider-root MuiDivider-fullWidth separation-line emotion-49"
                      />
                    </div>
                    <div
                      class="MuiBox-root emotion-50"
                    >
                      <div
                        class="MuiBox-root emotion-51"
                      >
                        <div
                          class="MuiBox-root emotion-17"
                        >
                          <p
                            class="MuiTypography-root MuiTypography-body1 MuiTypography-paragraph emotion-53"
                            data-se="signup-info"
                            id="identify_Description_Dont_have_an_account_aut1egri5t7iomJ3l1d7_10"
                          >
                            Don't have an account?
                          </p>
                        </div>
                      </div>
                      <div
                        class="MuiBox-root emotion-51"
                      >
                        <button
                          class="MuiTypography-root MuiTypography-body1 MuiLink-root MuiLink-underlineAlways MuiLink-button emotion-45"
                          data-se="enroll"
                          role="link"
                          type="button"
                        >
                          Sign up
                        </button>
                      </div>
                    </div>
                  </div>
                </form>
              </div>
            </div>
          </div>
        </div>
      </main>
    </div>
  </div>
</div>
`;

exports[`identify-with-password Client-side field change validation tests should attempt to submit page with all required fields empty 1`] = `
<div>
  <div
    class="MuiScopedCssBaseline-root emotion-0"
  >
    <div
      class="MuiScopedCssBaseline-root emotion-1"
    >
      <main
        class="auth-container main-container MuiBox-root emotion-2"
        data-commit="b9bbc0140703c3fbf0e2e58920362e70"
        data-version="0.0.0"
        dir="ltr"
        id="okta-sign-in"
        lang="en"
      >
        <div
          class="MuiScopedCssBaseline-root emotion-3"
        >
          <div
            class="MuiBox-root emotion-4"
          >
            <div
              class="MuiBox-root emotion-5"
            >
              <div
                class="okta-sign-in-header auth-header MuiBox-root emotion-6"
              >
                <h1
                  class="MuiTypography-root MuiTypography-h1 emotion-7"
                />
              </div>
              <div
                class="MuiBox-root emotion-8"
              >
                <form
                  class="o-form MuiBox-root emotion-9"
                  data-se="o-form"
                  novalidate=""
                >
                  <div
                    class="MuiBox-root emotion-10"
                  >
                    <div
                      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 MuiAlert-root MuiAlert-infoboxError MuiAlert-infobox emotion-11"
                      role="alert"
                    >
                      <div
                        class="MuiAlert-icon emotion-12"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit emotion-13"
                          fill="none"
                          focusable="false"
                          viewBox="0 0 24 24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            clip-rule="evenodd"
                            d="M9.879 1.707a3 3 0 0 1 4.242 0l8.172 8.172a3 3 0 0 1 0 4.242l-8.172 8.172a3 3 0 0 1-4.242 0L1.707 14.12a3 3 0 0 1 0-4.242L9.88 1.707ZM12 13a1 1 0 0 1-1-1V7h2v5a1 1 0 0 1-1 1Zm0 1.75a1.25 1.25 0 1 0 0 2.5 1.25 1.25 0 0 0 0-2.5Z"
                            fill="currentColor"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </div>
                      <div
                        class="MuiAlert-message emotion-14"
                      >
                        We found some errors. Please review the form and make corrections.
                      </div>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root emotion-15"
                  >
                    <div
                      class="MuiBox-root emotion-16"
                    >
                      <div
                        class="MuiBox-root emotion-17"
                      >
                        <h2
                          class="MuiTypography-root MuiTypography-h4 emotion-18"
                          data-se="o-form-head"
                          id="identify_Title_Sign_In_aut1egri5t7iomJ3l1d7_1"
                          tabindex="-1"
                        >
                          Sign In
                        </h2>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-16"
                    >
                      <div
                        class="MuiBox-root emotion-2"
                      >
                        <label
                          class="MuiFormLabel-root MuiInputLabel-root MuiFormLabel-colorPrimary MuiInputLabel-root emotion-21"
                          data-shrink="false"
                          for="identifier"
                        >
                          Username
                        </label>
                        <div
                          class="MuiInputBase-root MuiInputBase-colorPrimary Mui-error MuiInputBase-fullWidth Mui-focused emotion-22"
                          dir="ltr"
                        >
                          <input
                            aria-describedby=" identifier-error  "
                            aria-invalid="true"
                            autocomplete="username"
                            class="MuiInputBase-input emotion-23"
                            data-se="identifier"
                            id="identifier"
                            name="identifier"
                            type="text"
                          />
                        </div>
                        <div
                          class="MuiBox-root emotion-2"
                        >
                          <p
                            class="MuiFormHelperText-root Mui-error emotion-25"
                            data-se="identifier-error"
                            id="identifier-error"
                            role="alert"
                          >
                            This field cannot be left blank
                          </p>
                        </div>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-16"
                    >
                      <div
                        class="MuiBox-root emotion-2"
                      >
                        <label
                          class="MuiFormLabel-root MuiInputLabel-root MuiFormLabel-colorPrimary MuiInputLabel-root emotion-21"
                          data-shrink="false"
                          for="credentials.passcode"
                        >
                          Password
                        </label>
                        <div
                          class="MuiInputBase-root MuiInputBase-colorPrimary Mui-error MuiInputBase-fullWidth MuiInputBase-adornedEnd emotion-22"
                          dir="ltr"
                        >
                          <input
                            aria-describedby=" credentials.passcode-error  "
                            aria-invalid="true"
                            autocomplete="current-password"
                            class="MuiInputBase-input MuiInputBase-inputAdornedEnd emotion-23"
                            data-se="credentials.passcode"
                            id="credentials.passcode"
                            name="credentials.passcode"
                            type="password"
                          />
                          <div
                            class="MuiInputAdornment-root MuiInputAdornment-positionEnd emotion-31"
                          >
                            <button
                              aria-controls="credentials.passcode"
                              aria-label="Show password"
                              aria-pressed="false"
                              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium emotion-32"
                              data-mui-internal-clone-element="true"
                              tabindex="0"
                              type="button"
                            >
                              <svg
                                aria-hidden="true"
                                class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit emotion-13"
                                fill="none"
                                focusable="false"
                                viewBox="0 0 16 16"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  clip-rule="evenodd"
                                  d="M3.89765 11.5506C2.89626 10.6994 2.04176 9.50056 1.15617 8C2.04176 6.49944 2.89626 5.30062 3.89765 4.44944C4.96916 3.53865 6.24031 3 8 3C9.75969 3 11.0308 3.53865 12.1024 4.44944C13.1037 5.30062 13.9582 6.49944 14.8438 8C13.9582 9.50056 13.1037 10.6994 12.1024 11.5506C11.0308 12.4613 9.75969 13 8 13C6.24031 13 4.96916 12.4613 3.89765 11.5506ZM8 14C12 14 14 11.5 16 8C14 4.5 12 2 8 2C4 2 2 4.5 0 8C2 11.5 4 14 8 14ZM11 8C11 9.65685 9.65685 11 8 11C6.34315 11 5 9.65685 5 8C5 6.34315 6.34315 5 8 5C9.65685 5 11 6.34315 11 8ZM12 8C12 10.2091 10.2091 12 8 12C5.79086 12 4 10.2091 4 8C4 5.79086 5.79086 4 8 4C10.2091 4 12 5.79086 12 8Z"
                                  fill="currentColor"
                                  fill-rule="evenodd"
                                />
                              </svg>
                            </button>
                          </div>
                        </div>
                        <div
                          class="MuiBox-root emotion-2"
                        >
                          <p
                            class="MuiFormHelperText-root Mui-error emotion-25"
                            data-se="credentials.passcode-error"
                            id="credentials.passcode-error"
                            role="alert"
                          >
                            This field cannot be left blank
                          </p>
                        </div>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-16"
                    >
                      <fieldset
                        class="MuiFormControl-root MuiFormControl-marginNormal emotion-37"
                      >
                        <label
                          class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd emotion-38"
                        >
                          <span
                            class="MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorPrimary PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-root MuiCheckbox-colorPrimary emotion-39"
                          >
                            <input
                              class="PrivateSwitchBase-input emotion-40"
                              data-indeterminate="false"
                              data-se="rememberMe"
                              data-se-for-name="rememberMe"
                              id="rememberMe"
                              name="rememberMe"
                              type="checkbox"
                            />
                          </span>
                          <span
                            class="MuiTypography-root MuiTypography-body1 MuiFormControlLabel-label emotion-41"
                          >
                            Keep me signed in
                          </span>
                        </label>
                      </fieldset>
                    </div>
                    <div
                      class="MuiBox-root emotion-16"
                    >
                      <button
                        class="MuiButtonBase-root MuiButton-root MuiButton-primary MuiButton-primaryPrimary MuiButton-sizeMedium MuiButton-primarySizeMedium MuiButton-disableElevation MuiButton-fullWidth MuiButton-root MuiButton-primary MuiButton-primaryPrimary MuiButton-sizeMedium MuiButton-primarySizeMedium MuiButton-disableElevation MuiButton-fullWidth emotion-43"
                        data-type="save"
                        tabindex="0"
                        type="submit"
                      >
                        Sign in
                      </button>
                    </div>
                    <div
                      class="MuiBox-root emotion-16"
                    >
                      <button
                        class="MuiTypography-root MuiTypography-body1 MuiLink-root MuiLink-underlineAlways MuiLink-button emotion-45"
                        data-se="forgot-password"
                        role="link"
                        type="button"
                      >
                        Forgot password?
                      </button>
                    </div>
                    <div
                      class="MuiBox-root emotion-16"
                    >
                      <a
                        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways emotion-47"
                        data-se="help"
                        href="http://localhost:3000/help/login"
                      >
                        Help
                      </a>
                    </div>
                    <div
                      class="MuiBox-root emotion-16"
                    >
                      <hr
                        class="MuiDivider-root MuiDivider-fullWidth separation-line emotion-49"
                      />
                    </div>
                    <div
                      class="MuiBox-root emotion-50"
                    >
                      <div
                        class="MuiBox-root emotion-51"
                      >
                        <div
                          class="MuiBox-root emotion-17"
                        >
                          <p
                            class="MuiTypography-root MuiTypography-body1 MuiTypography-paragraph emotion-53"
                            data-se="signup-info"
                            id="identify_Description_Dont_have_an_account_aut1egri5t7iomJ3l1d7_10"
                          >
                            Don't have an account?
                          </p>
                        </div>
                      </div>
                      <div
                        class="MuiBox-root emotion-51"
                      >
                        <button
                          class="MuiTypography-root MuiTypography-body1 MuiLink-root MuiLink-underlineAlways MuiLink-button emotion-45"
                          data-se="enroll"
                          role="link"
                          type="button"
                        >
                          Sign up
                        </button>
                      </div>
                    </div>
                  </div>
                </form>
              </div>
            </div>
          </div>
        </div>
      </main>
    </div>
  </div>
</div>
`;

exports[`identify-with-password Client-side field change validation tests should attempt to submit page with all required fields empty and type in one of the required fields to remove error 1`] = `
<div>
  <div
    class="MuiScopedCssBaseline-root emotion-0"
  >
    <div
      class="MuiScopedCssBaseline-root emotion-1"
    >
      <main
        class="auth-container main-container MuiBox-root emotion-2"
        data-commit="b9bbc0140703c3fbf0e2e58920362e70"
        data-version="0.0.0"
        dir="ltr"
        id="okta-sign-in"
        lang="en"
      >
        <div
          class="MuiScopedCssBaseline-root emotion-3"
        >
          <div
            class="MuiBox-root emotion-4"
          >
            <div
              class="MuiBox-root emotion-5"
            >
              <div
                class="okta-sign-in-header auth-header MuiBox-root emotion-6"
              >
                <h1
                  class="MuiTypography-root MuiTypography-h1 emotion-7"
                />
              </div>
              <div
                class="MuiBox-root emotion-8"
              >
                <form
                  class="o-form MuiBox-root emotion-9"
                  data-se="o-form"
                  novalidate=""
                >
                  <div
                    class="MuiBox-root emotion-10"
                  >
                    <div
                      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 MuiAlert-root MuiAlert-infoboxError MuiAlert-infobox emotion-11"
                      role="alert"
                    >
                      <div
                        class="MuiAlert-icon emotion-12"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit emotion-13"
                          fill="none"
                          focusable="false"
                          viewBox="0 0 24 24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            clip-rule="evenodd"
                            d="M9.879 1.707a3 3 0 0 1 4.242 0l8.172 8.172a3 3 0 0 1 0 4.242l-8.172 8.172a3 3 0 0 1-4.242 0L1.707 14.12a3 3 0 0 1 0-4.242L9.88 1.707ZM12 13a1 1 0 0 1-1-1V7h2v5a1 1 0 0 1-1 1Zm0 1.75a1.25 1.25 0 1 0 0 2.5 1.25 1.25 0 0 0 0-2.5Z"
                            fill="currentColor"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </div>
                      <div
                        class="MuiAlert-message emotion-14"
                      >
                        We found some errors. Please review the form and make corrections.
                      </div>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root emotion-15"
                  >
                    <div
                      class="MuiBox-root emotion-16"
                    >
                      <div
                        class="MuiBox-root emotion-17"
                      >
                        <h2
                          class="MuiTypography-root MuiTypography-h4 emotion-18"
                          data-se="o-form-head"
                          id="identify_Title_Sign_In_aut1egri5t7iomJ3l1d7_1"
                          tabindex="-1"
                        >
                          Sign In
                        </h2>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-16"
                    >
                      <div
                        class="MuiBox-root emotion-2"
                      >
                        <label
                          class="MuiFormLabel-root MuiInputLabel-root MuiFormLabel-colorPrimary MuiInputLabel-root emotion-21"
                          data-shrink="false"
                          for="identifier"
                        >
                          Username
                        </label>
                        <div
                          class="MuiInputBase-root MuiInputBase-colorPrimary Mui-error MuiInputBase-fullWidth Mui-focused emotion-22"
                          dir="ltr"
                        >
                          <input
                            aria-describedby=" identifier-error  "
                            aria-invalid="true"
                            autocomplete="username"
                            class="MuiInputBase-input emotion-23"
                            data-se="identifier"
                            id="identifier"
                            name="identifier"
                            type="text"
                          />
                        </div>
                        <div
                          class="MuiBox-root emotion-2"
                        >
                          <p
                            class="MuiFormHelperText-root Mui-error emotion-25"
                            data-se="identifier-error"
                            id="identifier-error"
                            role="alert"
                          >
                            This field cannot be left blank
                          </p>
                        </div>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-16"
                    >
                      <div
                        class="MuiBox-root emotion-2"
                      >
                        <label
                          class="MuiFormLabel-root MuiInputLabel-root MuiFormLabel-colorPrimary MuiInputLabel-root emotion-21"
                          data-shrink="false"
                          for="credentials.passcode"
                        >
                          Password
                        </label>
                        <div
                          class="MuiInputBase-root MuiInputBase-colorPrimary Mui-error MuiInputBase-fullWidth MuiInputBase-adornedEnd emotion-22"
                          dir="ltr"
                        >
                          <input
                            aria-describedby=" credentials.passcode-error  "
                            aria-invalid="true"
                            autocomplete="current-password"
                            class="MuiInputBase-input MuiInputBase-inputAdornedEnd emotion-23"
                            data-se="credentials.passcode"
                            id="credentials.passcode"
                            name="credentials.passcode"
                            type="password"
                          />
                          <div
                            class="MuiInputAdornment-root MuiInputAdornment-positionEnd emotion-31"
                          >
                            <button
                              aria-controls="credentials.passcode"
                              aria-label="Show password"
                              aria-pressed="false"
                              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium emotion-32"
                              data-mui-internal-clone-element="true"
                              tabindex="0"
                              type="button"
                            >
                              <svg
                                aria-hidden="true"
                                class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit emotion-13"
                                fill="none"
                                focusable="false"
                                viewBox="0 0 16 16"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  clip-rule="evenodd"
                                  d="M3.89765 11.5506C2.89626 10.6994 2.04176 9.50056 1.15617 8C2.04176 6.49944 2.89626 5.30062 3.89765 4.44944C4.96916 3.53865 6.24031 3 8 3C9.75969 3 11.0308 3.53865 12.1024 4.44944C13.1037 5.30062 13.9582 6.49944 14.8438 8C13.9582 9.50056 13.1037 10.6994 12.1024 11.5506C11.0308 12.4613 9.75969 13 8 13C6.24031 13 4.96916 12.4613 3.89765 11.5506ZM8 14C12 14 14 11.5 16 8C14 4.5 12 2 8 2C4 2 2 4.5 0 8C2 11.5 4 14 8 14ZM11 8C11 9.65685 9.65685 11 8 11C6.34315 11 5 9.65685 5 8C5 6.34315 6.34315 5 8 5C9.65685 5 11 6.34315 11 8ZM12 8C12 10.2091 10.2091 12 8 12C5.79086 12 4 10.2091 4 8C4 5.79086 5.79086 4 8 4C10.2091 4 12 5.79086 12 8Z"
                                  fill="currentColor"
                                  fill-rule="evenodd"
                                />
                              </svg>
                            </button>
                          </div>
                        </div>
                        <div
                          class="MuiBox-root emotion-2"
                        >
                          <p
                            class="MuiFormHelperText-root Mui-error emotion-25"
                            data-se="credentials.passcode-error"
                            id="credentials.passcode-error"
                            role="alert"
                          >
                            This field cannot be left blank
                          </p>
                        </div>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-16"
                    >
                      <fieldset
                        class="MuiFormControl-root MuiFormControl-marginNormal emotion-37"
                      >
                        <label
                          class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd emotion-38"
                        >
                          <span
                            class="MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorPrimary PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-root MuiCheckbox-colorPrimary emotion-39"
                          >
                            <input
                              class="PrivateSwitchBase-input emotion-40"
                              data-indeterminate="false"
                              data-se="rememberMe"
                              data-se-for-name="rememberMe"
                              id="rememberMe"
                              name="rememberMe"
                              type="checkbox"
                            />
                          </span>
                          <span
                            class="MuiTypography-root MuiTypography-body1 MuiFormControlLabel-label emotion-41"
                          >
                            Keep me signed in
                          </span>
                        </label>
                      </fieldset>
                    </div>
                    <div
                      class="MuiBox-root emotion-16"
                    >
                      <button
                        class="MuiButtonBase-root MuiButton-root MuiButton-primary MuiButton-primaryPrimary MuiButton-sizeMedium MuiButton-primarySizeMedium MuiButton-disableElevation MuiButton-fullWidth MuiButton-root MuiButton-primary MuiButton-primaryPrimary MuiButton-sizeMedium MuiButton-primarySizeMedium MuiButton-disableElevation MuiButton-fullWidth emotion-43"
                        data-type="save"
                        tabindex="0"
                        type="submit"
                      >
                        Sign in
                      </button>
                    </div>
                    <div
                      class="MuiBox-root emotion-16"
                    >
                      <button
                        class="MuiTypography-root MuiTypography-body1 MuiLink-root MuiLink-underlineAlways MuiLink-button emotion-45"
                        data-se="forgot-password"
                        role="link"
                        type="button"
                      >
                        Forgot password?
                      </button>
                    </div>
                    <div
                      class="MuiBox-root emotion-16"
                    >
                      <a
                        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways emotion-47"
                        data-se="help"
                        href="http://localhost:3000/help/login"
                      >
                        Help
                      </a>
                    </div>
                    <div
                      class="MuiBox-root emotion-16"
                    >
                      <hr
                        class="MuiDivider-root MuiDivider-fullWidth separation-line emotion-49"
                      />
                    </div>
                    <div
                      class="MuiBox-root emotion-50"
                    >
                      <div
                        class="MuiBox-root emotion-51"
                      >
                        <div
                          class="MuiBox-root emotion-17"
                        >
                          <p
                            class="MuiTypography-root MuiTypography-body1 MuiTypography-paragraph emotion-53"
                            data-se="signup-info"
                            id="identify_Description_Dont_have_an_account_aut1egri5t7iomJ3l1d7_10"
                          >
                            Don't have an account?
                          </p>
                        </div>
                      </div>
                      <div
                        class="MuiBox-root emotion-51"
                      >
                        <button
                          class="MuiTypography-root MuiTypography-body1 MuiLink-root MuiLink-underlineAlways MuiLink-button emotion-45"
                          data-se="enroll"
                          role="link"
                          type="button"
                        >
                          Sign up
                        </button>
                      </div>
                    </div>
                  </div>
                </form>
              </div>
            </div>
          </div>
        </div>
      </main>
    </div>
  </div>
</div>
`;

exports[`identify-with-password renders form with focus 1`] = `
<div>
  <div
    class="MuiScopedCssBaseline-root emotion-0"
  >
    <div
      class="MuiScopedCssBaseline-root emotion-1"
    >
      <main
        class="auth-container main-container MuiBox-root emotion-2"
        data-commit="b9bbc0140703c3fbf0e2e58920362e70"
        data-version="0.0.0"
        dir="ltr"
        id="okta-sign-in"
        lang="en"
      >
        <div
          class="MuiScopedCssBaseline-root emotion-3"
        >
          <div
            class="MuiBox-root emotion-4"
          >
            <div
              class="MuiBox-root emotion-5"
            >
              <div
                class="okta-sign-in-header auth-header MuiBox-root emotion-6"
              >
                <h1
                  class="MuiTypography-root MuiTypography-h1 emotion-7"
                />
              </div>
              <div
                class="MuiBox-root emotion-8"
              >
                <form
                  class="o-form MuiBox-root emotion-9"
                  data-se="o-form"
                  novalidate=""
                >
                  <div
                    class="MuiBox-root emotion-10"
                  >
                    <div
                      class="MuiBox-root emotion-11"
                    >
                      <div
                        class="MuiBox-root emotion-12"
                      >
                        <h2
                          class="MuiTypography-root MuiTypography-h4 emotion-13"
                          data-se="o-form-head"
                          id="identify_Title_Sign_In_aut1egri5t7iomJ3l1d7_1"
                          tabindex="-1"
                        >
                          Sign In
                        </h2>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-11"
                    >
                      <div
                        class="MuiBox-root emotion-2"
                      >
                        <label
                          class="MuiFormLabel-root MuiInputLabel-root MuiFormLabel-colorPrimary MuiInputLabel-root emotion-16"
                          data-shrink="false"
                          for="identifier"
                        >
                          Username
                        </label>
                        <div
                          class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-fullWidth emotion-17"
                          dir="ltr"
                        >
                          <input
                            aria-invalid="false"
                            autocomplete="username"
                            class="MuiInputBase-input emotion-18"
                            data-se="identifier"
                            id="identifier"
                            name="identifier"
                            type="text"
                          />
                        </div>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-11"
                    >
                      <div
                        class="MuiBox-root emotion-2"
                      >
                        <label
                          class="MuiFormLabel-root MuiInputLabel-root MuiFormLabel-colorPrimary MuiInputLabel-root emotion-16"
                          data-shrink="false"
                          for="credentials.passcode"
                        >
                          Password
                        </label>
                        <div
                          class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-adornedEnd emotion-17"
                          dir="ltr"
                        >
                          <input
                            aria-invalid="false"
                            autocomplete="current-password"
                            class="MuiInputBase-input MuiInputBase-inputAdornedEnd emotion-18"
                            data-se="credentials.passcode"
                            id="credentials.passcode"
                            name="credentials.passcode"
                            type="password"
                          />
                          <div
                            class="MuiInputAdornment-root MuiInputAdornment-positionEnd emotion-24"
                          >
                            <button
                              aria-controls="credentials.passcode"
                              aria-label="Show password"
                              aria-pressed="false"
                              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium emotion-25"
                              data-mui-internal-clone-element="true"
                              tabindex="0"
                              type="button"
                            >
                              <svg
                                aria-hidden="true"
                                class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit emotion-26"
                                fill="none"
                                focusable="false"
                                viewBox="0 0 16 16"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  clip-rule="evenodd"
                                  d="M3.89765 11.5506C2.89626 10.6994 2.04176 9.50056 1.15617 8C2.04176 6.49944 2.89626 5.30062 3.89765 4.44944C4.96916 3.53865 6.24031 3 8 3C9.75969 3 11.0308 3.53865 12.1024 4.44944C13.1037 5.30062 13.9582 6.49944 14.8438 8C13.9582 9.50056 13.1037 10.6994 12.1024 11.5506C11.0308 12.4613 9.75969 13 8 13C6.24031 13 4.96916 12.4613 3.89765 11.5506ZM8 14C12 14 14 11.5 16 8C14 4.5 12 2 8 2C4 2 2 4.5 0 8C2 11.5 4 14 8 14ZM11 8C11 9.65685 9.65685 11 8 11C6.34315 11 5 9.65685 5 8C5 6.34315 6.34315 5 8 5C9.65685 5 11 6.34315 11 8ZM12 8C12 10.2091 10.2091 12 8 12C5.79086 12 4 10.2091 4 8C4 5.79086 5.79086 4 8 4C10.2091 4 12 5.79086 12 8Z"
                                  fill="currentColor"
                                  fill-rule="evenodd"
                                />
                              </svg>
                            </button>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-11"
                    >
                      <fieldset
                        class="MuiFormControl-root MuiFormControl-marginNormal emotion-28"
                      >
                        <label
                          class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd emotion-29"
                        >
                          <span
                            class="MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorPrimary PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-root MuiCheckbox-colorPrimary emotion-30"
                          >
                            <input
                              class="PrivateSwitchBase-input emotion-31"
                              data-indeterminate="false"
                              data-se="rememberMe"
                              data-se-for-name="rememberMe"
                              id="rememberMe"
                              name="rememberMe"
                              type="checkbox"
                            />
                          </span>
                          <span
                            class="MuiTypography-root MuiTypography-body1 MuiFormControlLabel-label emotion-32"
                          >
                            Keep me signed in
                          </span>
                        </label>
                      </fieldset>
                    </div>
                    <div
                      class="MuiBox-root emotion-11"
                    >
                      <button
                        class="MuiButtonBase-root MuiButton-root MuiButton-primary MuiButton-primaryPrimary MuiButton-sizeMedium MuiButton-primarySizeMedium MuiButton-disableElevation MuiButton-fullWidth MuiButton-root MuiButton-primary MuiButton-primaryPrimary MuiButton-sizeMedium MuiButton-primarySizeMedium MuiButton-disableElevation MuiButton-fullWidth emotion-34"
                        data-type="save"
                        tabindex="0"
                        type="submit"
                      >
                        Sign in
                      </button>
                    </div>
                    <div
                      class="MuiBox-root emotion-11"
                    >
                      <button
                        class="MuiTypography-root MuiTypography-body1 MuiLink-root MuiLink-underlineAlways MuiLink-button emotion-36"
                        data-se="forgot-password"
                        role="link"
                        type="button"
                      >
                        Forgot password?
                      </button>
                    </div>
                    <div
                      class="MuiBox-root emotion-11"
                    >
                      <a
                        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways emotion-38"
                        data-se="help"
                        href="http://localhost:3000/help/login"
                      >
                        Help
                      </a>
                    </div>
                    <div
                      class="MuiBox-root emotion-11"
                    >
                      <hr
                        class="MuiDivider-root MuiDivider-fullWidth separation-line emotion-40"
                      />
                    </div>
                    <div
                      class="MuiBox-root emotion-41"
                    >
                      <div
                        class="MuiBox-root emotion-42"
                      >
                        <div
                          class="MuiBox-root emotion-12"
                        >
                          <p
                            class="MuiTypography-root MuiTypography-body1 MuiTypography-paragraph emotion-44"
                            data-se="signup-info"
                            id="identify_Description_Dont_have_an_account_aut1egri5t7iomJ3l1d7_10"
                          >
                            Don't have an account?
                          </p>
                        </div>
                      </div>
                      <div
                        class="MuiBox-root emotion-42"
                      >
                        <button
                          class="MuiTypography-root MuiTypography-body1 MuiLink-root MuiLink-underlineAlways MuiLink-button emotion-36"
                          data-se="enroll"
                          role="link"
                          type="button"
                        >
                          Sign up
                        </button>
                      </div>
                    </div>
                  </div>
                </form>
              </div>
            </div>
          </div>
        </div>
      </main>
    </div>
  </div>
</div>
`;

exports[`identify-with-password renders form without focus 1`] = `
<div>
  <div
    class="MuiScopedCssBaseline-root emotion-0"
  >
    <div
      class="MuiScopedCssBaseline-root emotion-1"
    >
      <main
        class="auth-container main-container MuiBox-root emotion-2"
        data-commit="b9bbc0140703c3fbf0e2e58920362e70"
        data-version="0.0.0"
        dir="ltr"
        id="okta-sign-in"
        lang="en"
      >
        <div
          class="MuiScopedCssBaseline-root emotion-3"
        >
          <div
            class="MuiBox-root emotion-4"
          >
            <div
              class="MuiBox-root emotion-5"
            >
              <div
                class="okta-sign-in-header auth-header MuiBox-root emotion-6"
              >
                <h1
                  class="MuiTypography-root MuiTypography-h1 emotion-7"
                />
              </div>
              <div
                class="MuiBox-root emotion-8"
              >
                <form
                  class="o-form MuiBox-root emotion-9"
                  data-se="o-form"
                  novalidate=""
                >
                  <div
                    class="MuiBox-root emotion-10"
                  >
                    <div
                      class="MuiBox-root emotion-11"
                    >
                      <div
                        class="MuiBox-root emotion-12"
                      >
                        <h2
                          class="MuiTypography-root MuiTypography-h4 emotion-13"
                          data-se="o-form-head"
                          id="identify_Title_Sign_In_aut1egri5t7iomJ3l1d7_1"
                          tabindex="-1"
                        >
                          Sign In
                        </h2>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-11"
                    >
                      <div
                        class="MuiBox-root emotion-2"
                      >
                        <label
                          class="MuiFormLabel-root MuiInputLabel-root MuiFormLabel-colorPrimary MuiInputLabel-root emotion-16"
                          data-shrink="false"
                          for="identifier"
                        >
                          Username
                        </label>
                        <div
                          class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-fullWidth emotion-17"
                          dir="ltr"
                        >
                          <input
                            aria-invalid="false"
                            autocomplete="username"
                            class="MuiInputBase-input emotion-18"
                            data-se="identifier"
                            id="identifier"
                            name="identifier"
                            type="text"
                          />
                        </div>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-11"
                    >
                      <div
                        class="MuiBox-root emotion-2"
                      >
                        <label
                          class="MuiFormLabel-root MuiInputLabel-root MuiFormLabel-colorPrimary MuiInputLabel-root emotion-16"
                          data-shrink="false"
                          for="credentials.passcode"
                        >
                          Password
                        </label>
                        <div
                          class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-adornedEnd emotion-17"
                          dir="ltr"
                        >
                          <input
                            aria-invalid="false"
                            autocomplete="current-password"
                            class="MuiInputBase-input MuiInputBase-inputAdornedEnd emotion-18"
                            data-se="credentials.passcode"
                            id="credentials.passcode"
                            name="credentials.passcode"
                            type="password"
                          />
                          <div
                            class="MuiInputAdornment-root MuiInputAdornment-positionEnd emotion-24"
                          >
                            <button
                              aria-controls="credentials.passcode"
                              aria-label="Show password"
                              aria-pressed="false"
                              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium emotion-25"
                              data-mui-internal-clone-element="true"
                              tabindex="0"
                              type="button"
                            >
                              <svg
                                aria-hidden="true"
                                class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit emotion-26"
                                fill="none"
                                focusable="false"
                                viewBox="0 0 16 16"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  clip-rule="evenodd"
                                  d="M3.89765 11.5506C2.89626 10.6994 2.04176 9.50056 1.15617 8C2.04176 6.49944 2.89626 5.30062 3.89765 4.44944C4.96916 3.53865 6.24031 3 8 3C9.75969 3 11.0308 3.53865 12.1024 4.44944C13.1037 5.30062 13.9582 6.49944 14.8438 8C13.9582 9.50056 13.1037 10.6994 12.1024 11.5506C11.0308 12.4613 9.75969 13 8 13C6.24031 13 4.96916 12.4613 3.89765 11.5506ZM8 14C12 14 14 11.5 16 8C14 4.5 12 2 8 2C4 2 2 4.5 0 8C2 11.5 4 14 8 14ZM11 8C11 9.65685 9.65685 11 8 11C6.34315 11 5 9.65685 5 8C5 6.34315 6.34315 5 8 5C9.65685 5 11 6.34315 11 8ZM12 8C12 10.2091 10.2091 12 8 12C5.79086 12 4 10.2091 4 8C4 5.79086 5.79086 4 8 4C10.2091 4 12 5.79086 12 8Z"
                                  fill="currentColor"
                                  fill-rule="evenodd"
                                />
                              </svg>
                            </button>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-11"
                    >
                      <fieldset
                        class="MuiFormControl-root MuiFormControl-marginNormal emotion-28"
                      >
                        <label
                          class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd emotion-29"
                        >
                          <span
                            class="MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorPrimary PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-root MuiCheckbox-colorPrimary emotion-30"
                          >
                            <input
                              class="PrivateSwitchBase-input emotion-31"
                              data-indeterminate="false"
                              data-se="rememberMe"
                              data-se-for-name="rememberMe"
                              id="rememberMe"
                              name="rememberMe"
                              type="checkbox"
                            />
                          </span>
                          <span
                            class="MuiTypography-root MuiTypography-body1 MuiFormControlLabel-label emotion-32"
                          >
                            Keep me signed in
                          </span>
                        </label>
                      </fieldset>
                    </div>
                    <div
                      class="MuiBox-root emotion-11"
                    >
                      <button
                        class="MuiButtonBase-root MuiButton-root MuiButton-primary MuiButton-primaryPrimary MuiButton-sizeMedium MuiButton-primarySizeMedium MuiButton-disableElevation MuiButton-fullWidth MuiButton-root MuiButton-primary MuiButton-primaryPrimary MuiButton-sizeMedium MuiButton-primarySizeMedium MuiButton-disableElevation MuiButton-fullWidth emotion-34"
                        data-type="save"
                        tabindex="0"
                        type="submit"
                      >
                        Sign in
                      </button>
                    </div>
                    <div
                      class="MuiBox-root emotion-11"
                    >
                      <button
                        class="MuiTypography-root MuiTypography-body1 MuiLink-root MuiLink-underlineAlways MuiLink-button emotion-36"
                        data-se="forgot-password"
                        role="link"
                        type="button"
                      >
                        Forgot password?
                      </button>
                    </div>
                    <div
                      class="MuiBox-root emotion-11"
                    >
                      <a
                        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways emotion-38"
                        data-se="help"
                        href="http://localhost:3000/help/login"
                      >
                        Help
                      </a>
                    </div>
                    <div
                      class="MuiBox-root emotion-11"
                    >
                      <hr
                        class="MuiDivider-root MuiDivider-fullWidth separation-line emotion-40"
                      />
                    </div>
                    <div
                      class="MuiBox-root emotion-41"
                    >
                      <div
                        class="MuiBox-root emotion-42"
                      >
                        <div
                          class="MuiBox-root emotion-12"
                        >
                          <p
                            class="MuiTypography-root MuiTypography-body1 MuiTypography-paragraph emotion-44"
                            data-se="signup-info"
                            id="identify_Description_Dont_have_an_account_aut1egri5t7iomJ3l1d7_10"
                          >
                            Don't have an account?
                          </p>
                        </div>
                      </div>
                      <div
                        class="MuiBox-root emotion-42"
                      >
                        <button
                          class="MuiTypography-root MuiTypography-body1 MuiLink-root MuiLink-underlineAlways MuiLink-button emotion-36"
                          data-se="enroll"
                          role="link"
                          type="button"
                        >
                          Sign up
                        </button>
                      </div>
                    </div>
                  </div>
                </form>
              </div>
            </div>
          </div>
        </div>
      </main>
    </div>
  </div>
</div>
`;

exports[`identify-with-password renders the loading state first 1`] = `
<div>
  <div
    class="MuiScopedCssBaseline-root emotion-0"
  >
    <div
      class="MuiScopedCssBaseline-root emotion-1"
    >
      <main
        class="auth-container main-container MuiBox-root emotion-2"
        data-commit="b9bbc0140703c3fbf0e2e58920362e70"
        data-version="0.0.0"
        dir="ltr"
        id="okta-sign-in"
        lang="en"
      >
        <div
          class="MuiScopedCssBaseline-root emotion-3"
        >
          <div
            class="MuiBox-root emotion-4"
          >
            <div
              class="MuiBox-root emotion-5"
            >
              <div
                class="okta-sign-in-header auth-header MuiBox-root emotion-6"
              >
                <h1
                  class="MuiTypography-root MuiTypography-h1 emotion-7"
                />
              </div>
              <div
                class="MuiBox-root emotion-8"
              >
                <div
                  class="MuiBox-root emotion-9"
                >
                  <span
                    aria-label="Processing..."
                    aria-valuetext="Processing..."
                    class="MuiCircularProgress-root MuiCircularProgress-indeterminate MuiCircularProgress-colorPrimary emotion-10"
                    role="progressbar"
                    style="width: 1.143rem; height: 1.143rem;"
                  >
                    <svg
                      class="MuiCircularProgress-svg emotion-11"
                      viewBox="22 22 44 44"
                    >
                      <circle
                        class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate emotion-12"
                        cx="44"
                        cy="44"
                        fill="none"
                        r="18"
                        stroke-width="8"
                      />
                    </svg>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </main>
    </div>
  </div>
</div>
`;
